--- a/springsecurity/src/main/resources/application.yml
+++ b/springsecurity/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 server:
   port: 8080
+spring:
+  datasource:
+    url: ${RDS_END_POINT}
+    username: ${RDS_MYSQL_ADMIN_ID}
+    password: ${RDS_MYSQL_ADMIN_PASSWORD}
 
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: true
