--- a/springsecurity/.gitignore
+++ b/springsecurity/.gitignore
@@ -1,3 +1,4 @@
+
 HELP.md
 .gradle
 build/
@@ -25,6 +26,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
+.env
 
 ### NetBeans ###
 /nbproject/private/
