--- a/springsecurity/build.gradle
+++ b/springsecurity/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'me.paulschwarz:spring-dotenv:2.5.4'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 
 	// Auto Reload
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
